k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lightspeed-ingress
spec:
  type: LoadBalancer
  ports:
    - port: 8084
      targetPort: 8084
  selector:
    app: lightspeed-ingress
